@@ -14,6 +14,13 @@ CHECK_USER_UID_REGEXP=[$@%\\.+a-zA-Z0-9_-]
 # this will lowercase the uid
 AUTO_TO_LOWERCASE_UID=false
 
+# WARNING: Changing the username might have impact on external systems like
+# imap server that allows acls to be set. Imap ACLS usually use
+# symbolic names so when changing the user name without changing
+# the ACL breaks the ACL. open-xchange-admin will NOT change those
+# ACLS, so DO NOT CHANGE THIS SETTING ON OX Express
+USERNAME_CHANGEABLE=false
+
 # are we allowed to change primary mail address?
 # Only change, if you know what you are doing (Outlook might
 # not work anymore under certain circumstances)
