@@ -122,5 +122,6 @@ public class AdminProperties {
             public static final String HOME_DIR_ROOT             = "HOME_DIR_ROOT";
             public static final String PRIMARY_MAIL_UNCHANGEABLE = "PRIMARY_MAIL_UNCHANGEABLE";
             public static final String DISPLAYNAME_UNIQUE = "DISPLAYNAME_UNIQUE";
+            public static final String USERNAME_CHANGEABLE = "USERNAME_CHANGEABLE";
 	}
 }
