@@ -1,3 +1,8 @@
+* 2007-10-15 - manuel.kraft@open-xchange.com
+ 
+  - Bugfix ID#9806 [HEAD] username can't be changed
+  - Bugfix ID#9805 [HEAD] No error message when username is going to be changed
+
 * 2007-10-11 - dennis.sieben@open-xchange.com
  
   - Bugfix ID#9777 no adequate description of parameters
